# ctrace-scribe

./: CHANGELOG.md  Cargo.toml  LICENSE-APACHE  README.md  clippy.toml  deny.toml
.github/workflows/: ci.yml
agent/: intent-card.json
src/: backfill.rs  main.rs  parser.rs  render.rs  render_session.rs  rollup.rs
tests/: acceptance_ac1.rs  acceptance_ac10.rs  acceptance_ac2.rs  acceptance_ac3.rs  acceptance_ac4.rs  acceptance_ac5.rs  acceptance_ac6.rs  acceptance_ac7.rs  acceptance_ac8.rs  acceptance_ac9.rs  fixtures.rs  proptest_invariants.rs  render_session.rs  rollup_ac1.rs  rollup_ac2.rs  rollup_ac3.rs  rollup_ac4.rs  rollup_ac5.rs  rollup_ac6.rs  rollup_ac7.rs  rollup_ac8.rs
